task-12 - added unit tests for header

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -8,6 +8,7 @@
       [routerLinkActiveOptions]="{exact:true}"
       #rlaHome="routerLinkActive"
       [color]="rlaHome.isActive ? 'primary' : 'basic'"
+      id="photos-link"
     >
       Photos
     </a>
@@ -18,6 +19,7 @@
       routerLinkActive
       #rlaFavorites="routerLinkActive"
       [color]="rlaFavorites.isActive ? 'primary' : 'basic'"
+      id="favorites-link"
     >
       Favorites
     </a>
