task-23 - added ui part of photos page

--- a/src/app/features/photos/photos/photos.component.html
+++ b/src/app/features/photos/photos/photos.component.html
@@ -1,1 +1,3 @@
-<div></div>
+<section class="images">
+  <app-photo-card *ngFor="let photo of (photos$ | async)" [imageUrl]="photo"></app-photo-card>
+</section>
