--- a/src/app/features/photos/photos/photos.component.scss
+++ b/src/app/features/photos/photos/photos.component.scss
@@ -14,3 +14,10 @@
     grid-template-columns: 1fr;
   }
 }
+
+.spinner-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 100px;
+}
