task-29 - added favorites service

--- a/src/app/features/photos/photos/photos.component.html
+++ b/src/app/features/photos/photos/photos.component.html
@@ -1,6 +1,11 @@
 <app-infinite-scroll (scrolled)="loadImages()">
   <section class="images">
-    <app-photo-card *ngFor="let photo of (photos$ | async)" [imageUrl]="photo"></app-photo-card>
+    <app-photo-card
+      *ngFor="let photo of (photos$ | async)"
+      [imageUrl]="photo.url"
+      [isFavorite]="photo.isFavorite"
+      (selectImage)="addToFavorites(photo.url)"
+    ></app-photo-card>
   </section>
   <div class="spinner-container">
     <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
