task-31 - extracted grid with photos to a different component

--- a/src/app/features/photos/photos/photos.component.html
+++ b/src/app/features/photos/photos/photos.component.html
@@ -1,12 +1,5 @@
 <app-infinite-scroll (scrolled)="loadImages()">
-  <section class="images">
-    <app-photo-card
-      *ngFor="let photo of (photos$ | async)"
-      [imageUrl]="photo.url"
-      [isFavorite]="photo.isFavorite"
-      (selectImage)="addToFavorites(photo.url)"
-    ></app-photo-card>
-  </section>
+  <app-images-section *ngIf="photos$ | async as photos" [photos]="photos" (imageClicked)="addToFavorites($event)"></app-images-section>
   <div class="spinner-container">
     <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
   </div>
