task-33 - added logic for single photo

--- a/src/app/features/favorites/favorites/favorites.component.html
+++ b/src/app/features/favorites/favorites/favorites.component.html
@@ -1,1 +1,1 @@
-<app-images-section *ngIf="images$ | async as images" [photos]="images"></app-images-section>
+<app-images-section *ngIf="images$ | async as images" [photos]="images" (imageClicked)="goToImage($event)"></app-images-section>
