--- a/src/app/shared/photo-card/photo-card.component.html
+++ b/src/app/shared/photo-card/photo-card.component.html
@@ -1,4 +1,4 @@
-<mat-card (click)="click()">
+<mat-card (click)="selectImage.emit()">
   <div mat-card-image class="img-container">
     <div class="img-container__inner">
       <img [src]="imageUrl" alt="A photo from source" />
